fix: Desktop grid spacing and icons size

--- a/src/pages/Desktop/components/DesktopItem/style.scss
+++ b/src/pages/Desktop/components/DesktopItem/style.scss
@@ -8,8 +8,8 @@
   justify-content: center;
 
   img:first-of-type {
-    max-width: 30px;
-    max-height: 30px;
+    max-width: 40px;
+    max-height: 40px;
   }
 
   > p {
